hphp/hack/test/typecheck/new_static3.php.exp
File "new_static3.php", line 21, characters 14-19:
Can't use new static() for B; __construct arguments are not guaranteed to be consistent in child classes (Typing[4060])
File "new_static3.php", line 19, characters 7-7:
This declaration is neither final nor uses the <<__ConsistentConstruct>> attribute
